feature: add create client resource

--- a/pinapp/src/main/resources/application.properties
+++ b/pinapp/src/main/resources/application.properties
@@ -8,3 +8,12 @@ springdoc.swagger-ui.enabled=true
 logging.level.root=INFO
 spring.main.web-application-type=servlet
 management.endpoints.web.exposure.include=health,info,metrics,env
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Enable H2 Console (optional)
+spring.h2.console.enabled=true
